--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,104 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: 'Fira Sans', sans-serif;
+}
+
+
+#hero {
+    height: 800px;
+    width: 100%;
+    /* background-color: rgb(206, 230, 225); */
+}
+
+/* .hero_seccion {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 50px;
+} */
+
+h1 {
+    font-size:4rem;
+}
+
+.foto-hero{
+    height:80vh;
+    width: auto;
+}
+
+#cajas {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+    margin-top: 50px;
+    margin: 80px 80px;
+
+}
+
+.caja-1 {
+    height: 800px;
+    background-color: red;
+    transition: all 0.3s ease-in-out;
+}
+
+.caja-1:hover {
+    transform: translateY(-70px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+
+.caja-2 {
+    height: 800px;
+    background-color: green;
+    transition: all 0.3s ease-in-out;
+}
+
+.caja-2:hover {
+    transform: translateY(-70px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.caja-3 {
+    height: 800px;
+    background-color: blue;
+    transition: all 0.3s ease-in-out;
+}
+
+.caja-3:hover {
+    transform: translateY(-70px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.caja-4 {
+    height: 800px;
+    background-color: yellow;
+    transition: all 0.3s ease-in-out;
+}
+
+.caja-4:hover {
+    transform: translateY(-70px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+
+#trabajo {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    text-align: center;
+    /* margin: 80px 80px; */
+    gap: 50px;
+    margin-top: 100px;
+    background-color: rgb(206, 230, 225);
+    padding: 60px;
+}
+
+#trabajo div{
+    padding: 30px;
+    border: 1px solid black;
+    border-radius: 10px;
+       
+}
